@@ -196,6 +196,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1484: BinStorage should support comma seperated path (daijy)
+
 PIG-1467: order by fail when set "fs.file.impl.disable.cache" to true (daijy)
 
 PIG-1443: DefaultTuple underestimate the memory footprint for string (daijy)
